# openmenu

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.c  release-please-config.json  vm2_api.c
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release-please.yaml
KOS patch/: fs_iso9660.c
backend/: cb_loader.h  controls.p1.h  db_item.h  db_list.c  db_list.h  gd_item.h  gd_list.c  gdemu_control.c  gdemu_sdk.c  gdmenu_binary.h
docker/: Dockerfile  build.sh  entrypoint.sh
docker/kos_patch/: README.md  fs_iso9660.patch
gdrom/: gdrom_fs.h
inc/: bloader.h  dat_format.h  dbgprint.h  vm2_api.h
src/: CMakeLists.txt
src/openmenu/: CMakeLists.txt
src/openmenu/src/: bloader.h  main.c
src/openmenu/src/backend/: gdemu_control.c  gdemu_sdk.c  gdemu_sdk.h  gdmenu_binary.h
src/openmenu/src/texture/: block_pool.c  lru.c  lru.h  simple_texture_allocator.c  simple_texture_allocator.h  txr_manager.c
src/openmenu/src/ui/: animation.h  common.h  draw_kos.c  draw_kos.h  draw_prototypes.h  font_prototypes.h  theme_manager.c  theme_manager.h  ui_common.h  ui_grid.c  ui_grid.h  ui_line_desc.c  ui_line_desc.h  ui_line_large.c  ui_line_large.h  ui_menu_credits.c  ui_menu_credits.h  ui_scroll.c  ui_scroll.h
src/openmenu/src/ui/dc/: font_bitmap.c  font_bmf.c  input.c  pvr_texture.c  pvr_texture.h
src/openmenu/src/vm2/: vm2_api.c  vm2_api.h
src/openmenu_settings/: CMakeLists.txt
src/openmenu_settings/include/: openmenu_pal.h  openmenu_savefile.h  openmenu_settings.h
src/openmenu_settings/src/: openmenu_savefile.c  openmenu_settings.c
src/openmenu_shared/: CMakeLists.txt
src/openmenu_shared/include/backend/: dat_format.h  gd_list.h
src/openmenu_shared/include/gdrom/: gdrom_fs.h
src/openmenu_shared/include/ui/: global_settings.h  openmenu_lcd.h  openmenu_vmu.h
src/openmenu_shared/src/backend/: db_list.c  gd_list.c
src/openmenu_shared/src/texture/: dat_reader.c  serial_sanitize.c
src/openmenu_shared/src/ui/: global_settings.c
src/tools/: CMakeLists.txt
src/tools/src/: dat_packer_interface.h  dat_packer_internal.c  menufaker.c  metapacker.c  packer.c  reader.c  renamecsv.c  stripper.c  tsv_to_txt_ini.c
texture/: block_pool.c  block_pool.h  dat_reader.c  lru.c  lru.h  serial_sanitize.c  simple_texture_allocator.c  txr_manager.c  txr_manager.h
tools/: dat_packer_interface.h  dat_packer_internal.c  metapacker.c  packer.c  reader.c  stripper.c  tsv_to_txt_ini.c
ui/: animation.c  animation.h  common.h  draw_kos.c  draw_kos.h  draw_prototypes.h  global_settings.c  openmenu_lcd.h  openmenu_pal.h  openmenu_vmu.h  theme_manager.c  theme_manager.h  ui_grid.c  ui_line_desc.c  ui_line_large.c  ui_menu_credits.c  ui_menu_credits.h  ui_scroll.c
ui/dc/: font_bitmap.c  font_bmf.c  input.c  input.h  pvr_texture.c  text_widths.h
